syntax = "proto3";

package proto;

message ShardForNode {
    //    Node node = 1;
    int32 numOfLeader = 2;
    int32 numOfReplica = 3;
    int32 numOfLiveReplica = 4;
    int32 numOfIsrReplica = 5;
}

message DatabaseState {
    string name = 1;
    int32 numOfLeader = 2;
    int32 numOfShard = 3;
    int32 numOfReplica = 4;
    int32 numOfLiveReplica = 5;
    int32 numOfIsrReplica = 6;
    string desc = 7;
}